--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,43 @@
+
+
+@font-face {
+  font-family: 'Indie_Flower';
+  src: local('Indie_Flower'), url("../public/assets/fonts/IndieFlower-Regular.ttf") format('truetype');
+}
+
+
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* position: relative; */
+  background-image: url("../public/assets/images/background/bgr-image.jpg");
+  
+  /* background-color: #cccccc; */
+  /* background-color:pink; */
+  /* background-blend-mode: color-burn; */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
+  /* width: 100%; */
+  /* height: 100vh; */
+
+  @media (max-width: 640px) {
+    /* max-width: 90%; */
+    margin: 0 50px;
+  }
+  /* Background */
+  /* background-image: radial-gradient(#f5c666 15%, #ffffff 20%); */
+  /* background-position: 0 0; */
+  /* background-size: 60px 60px; */
+  /* height: 2000px; */
+
+  color: rgb(53, 66, 139);
+  margin: auto;
+  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -11,3 +46,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+button.splide__arrow {
+  border: 1px solid white;
+  width: 2rem;
+  height: 2rem;
+}
+
+a {
+  margin: 2rem;
+  font-size: 1rem;
+}
+
+svg {
+  font-size: 4rem;
+  text-align: center;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: Indie_Flower, serif;
+}
+
