--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,23 @@
-
-
-@font-face {
-  font-family: 'Indie_Flower';
-  src: local('Indie_Flower'), url("../public/assets/fonts/IndieFlower-Regular.ttf") format('truetype');
+:root {
+  --olivine: #b6d094;
+  --buff: #e1aa7d;
+  --persianOrange: #be8a60;
+  --wine: #6a2e35;
+  --raisinBlack: #2e2836;
 }
 
-
+@font-face {
+  font-family: "Indie_Flower";
+  src: local("Indie_Flower"),
+    url("../public/assets/fonts/IndieFlower-Regular.ttf") format("truetype");
+}
 
 body {
   /* display: flex; */
   /* flex-direction: column; */
   /* position: relative; */
-  background-image: url("../public/assets/images/background/bgr-image.jpg");
-  
+  /* background-image: url("../public/assets/images/background/bgr-image.jpg"); */
+
   /* background-color: #cccccc; */
   /* background-color:pink; */
   /* background-blend-mode: color-burn; */
@@ -32,7 +37,7 @@ body {
   /* background-size: 60px 60px; */
   /* height: 2000px; */
 
-  color: rgb(53, 66, 139);
+  color: var(--raisinBlack);
   margin: auto;
   font-family: Arial, Helvetica, sans-serif;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -43,19 +48,45 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-button.splide__arrow {
-  border: 1px solid white;
-  width: 2rem;
-  height: 2rem;
+.navlink {
+  /* margin: 2rem; */
+  font-size: 1rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 45px;
+  border: 1px solid var(--persianOrange);
+  /* box-shadow: 3px 3px 10px 3px var(--persianOrange); */
+  padding: 5px 5px;
+  text-align: center;
+  width: 210px;
+  margin: 5px 15px;
+  text-decoration: none;
+  background: white;
+  font-size: 1.4rem;
 }
 
-a {
-  margin: 2rem;
-  font-size: 1rem;
+@media (max-width: 800px) {
+  .navlink {
+    width: 30%;
+    font-size: 1.2rem;
+    padding: 5px 15px;
+    border-radius: 25px;
+
+    span {
+      font-size: 14px;
+    }
+    svg {
+      font-size: 3rem;
+    }
+    font-size: 1.2rem;
+  }
 }
 
 svg {
@@ -63,7 +94,142 @@ svg {
   text-align: center;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-family: Indie_Flower, serif;
 }
 
+.recipe-card-container {
+  display: flex;
+  /* gap: 1rem; */
+  overflow-x: scroll;
+  margin: 3px 8px 3px 8px;
+}
+
+.recipe-card {
+  max-height: 200px;
+  border-right: 2px solid var(--buff);
+  /* border-radius: 2rem; */
+  /* box-shadow: 0 3px 5px 0 var(--olivine); */
+  margin: 2px 14px 5px 2px;
+  padding: 2px 14px 5px 2px;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.recipe-card-container::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.recipe-card-container {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.popular-container {
+  width: auto;
+  /* background-image: linear-gradient(35deg, #bfc3c4, white); */
+  /* background-image: linear-gradient(35deg, var(--buff), white); */
+  border: 2px var(--buff) solid;
+  /* border-radius: 2rem; */
+}
+
+@media (max-width: 640px) {
+  img {
+    padding: 3px 5px;
+    max-width: 150px;
+    max-height: 180px;
+  }
+  div {
+    position: absolute;
+    bottom: 19px;
+    margin-bottom: 2px;
+    padding: 0 25px;
+    width: 99px;
+    height: 90px;
+    z-index: 15;
+    font-size: 1.3rem;
+  }
+}
+
+.home-container {
+  margin: 0 100px;
+}
+
+@media (max-width: 640px) {
+  .home-container {
+    margin: 0 10px;
+  }
+}
+
+.nav-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: row;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  padding: 1.2rem;
+  margin-bottom: 1.6rem;
+}
+
+@media (max-width: 600px) {
+  .nav-list {
+    padding: 0;
+    margin: 10px 0;
+  }
+}
+
+footer {
+  border-top: solid 2px var(--buff);
+  background: white;
+  color: rgba(200, 100, 0, 0.9);
+  font-size: 1.5rem;
+  height: 30px;
+  padding: 15px 40px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 40px;
+}
+
+@media (max-width: 640px) {
+  footer {
+    font-size: 1rem;
+  }
+}
+
+.header-text {
+  width: 700px;
+  background: linear-gradient(
+    to left,
+    transparent,
+    white,
+    white,
+    white,
+    white,
+    transparent 100%
+  );
+  background-position: 0 100%;
+  background-size: 100% 2px;
+  background-repeat: repeat-x;
+
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  font-family: Indie_Flower, serif;
+  color: steelblue;
+  font-size: 2rem;
+  margin-bottom: 20px;
+  padding: 5px 0;
+  text-align: center;
+}
+@media (max-width: 640px) {
+  .header-text {
+    font-size: 1.3rem;
+    margin: 20px 30px 10px;
+  }
+}
