--- a/src/index.css
+++ b/src/index.css
@@ -66,27 +66,6 @@ code {
 
 /* NAV-LINK */
 
-.nav-link {
-  color: var(--WINE);
-  font-size: 1rem;
-  display: flex;
-  /* flex-direction: column; */
-  gap: 7px;
-  justify-content: center;
-  align-items: center;
-  opacity: 80%;
-  border-radius: 15px;
-  /* border: 2px solid var(--wine); */
-  /* box-shadow: 3px 3px 10px 3px var(--persianOrange); */
-  padding: 8px 15px;
-  text-align: center;
-  min-width: 150px;
-  margin: 5px 7px;
-  text-decoration: none;
-  background: white;
-  font-size: 1.4rem;
-}
-
 .nav-link svg {
   font-size: 2.5rem;
   text-align: center;
@@ -172,24 +151,23 @@ h5 {
   }
 }
 
-@media (max-width: 640px) {
+/* @media (max-width: 640px) {
   img {
     padding: 3px 5px;
     max-width: 150px;
     max-height: 180px;
   }
   div {
-    /* position: absolute; */
-    bottom: 19px;
-    margin-bottom: 2px;
-    /* padding: 0 10px; */
-    /* width: 99%; */
-    /* height: 99%; */
-    /* max-width: 99%; */
-    z-index: 15;
+    position: absolute
+bottom: 19px;
+margin-bottom: 2px;
+/* padding: 0 10px; */
+/* width: 99%; */
+/* height: 99%; */
+/* max-width: 99%; */
+/* z-index: 15;
     font-size: 1.3rem;
-  }
-}
+  } */
 
 .home {
   /* display: flex; */
@@ -198,17 +176,6 @@ h5 {
   /* justify-content: center; */
   margin: 0;
   padding: 0;
-}
-
-.home-container {
-  margin: 0 100px;
-}
-
-@media (max-width: 640px) {
-  .home-container {
-    margin: 0;
-    padding: 0;
-  }
 }
 
 /* .nav-list {
