--- a/src/index.css
+++ b/src/index.css
@@ -95,19 +95,16 @@ h5 {
   font-family: Indie_Flower, serif;
 }
 
-.recipe-card-container {
+/* .recipe-card-container {
   display: flex;
-  /* gap: 1rem; */
+  gap: 1rem;
   align-items: center;
   overflow-x: scroll;
   margin: 3px 8px 3px 8px;
-}
+} */
 
 .recipe-card {
-  min-height: 160px;
-  /* max-height: 150px; */
-  /* width: auto; */
-  min-width: 200px;
+  /* min-width: 200px; */
   border-right: 2px solid var(--buff);
   /* border-radius: 2rem; */
   /* box-shadow: 0 3px 5px 0 var(--olivine); */
@@ -123,15 +120,16 @@ h5 {
   /* background: red; */
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-.recipe-card-container::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-.recipe-card-container {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
 
 .popular-container {
@@ -254,17 +252,6 @@ footer {
   padding: 0.5rem 0;
   margin: 0;
   box-shadow: 3px 3px 10px 3px lightgray;
-}
-
-.recipe-card-container {
-  display: flex;
-  /* justify-content: center; */
-  padding: 8px 0;
-}
-
-.recipe-card {
-  display: flex;
-  /* height: 300px; */
 }
 
 .recipe-card-img {
