--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
 
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 @font-face {
@@ -95,6 +96,13 @@ h5 {
   font-family: Indie_Flower, serif;
 }
 
+h1 {
+  font-size: 1.5rem;
+}
+h2 {
+  font-size: 1.3rem;
+}
+
 /* .recipe-card-container {
   display: flex;
   gap: 1rem;
@@ -166,15 +174,6 @@ margin-bottom: 2px;
 /* z-index: 15;
     font-size: 1.3rem;
   } */
-
-.home {
-  /* display: flex; */
-  /* flex-direction: horizontal; */
-  /* flex-wrap: wrap; */
-  /* justify-content: center; */
-  margin: 0;
-  padding: 0;
-}
 
 /* .nav-list {
   display: flex;
@@ -289,12 +288,12 @@ li span {
   opacity: 50%;
   text-decoration: none;
 } */
-ul li::before {
-  content: "⮩";
+/* ul li::before {
+  content: "-";
   color: hotpink;
   font-size: large;
   margin-right: 4px;
-}
+} */
 
 ol {
   list-style-type: decimal;
